--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password=p
 spring.jpa.hibernate.ddl-auto=create
 
 api.v1.rest=api/v1/rest
+api.v1=api/v1
+
+dish.name.notempty=To pole nie mo?e by? puste.
+dish.price.value=Warto?? musi wynosi? conajmniej 0,01.
