--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.0'
 	//implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.0'
 	implementation 'org.hibernate:hibernate-gradle-plugin:5.6.9.Final'
 	implementation 'org.postgresql:postgresql:42.3.6'
 	compileOnly 'org.projectlombok:lombok'
