Change database to SQLite +configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
-spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant_administration_db
-spring.datasource.username=postgres
-spring.datasource.password=p
+#spring.datasource.hikari.connectionTimeout=20000
+#spring.datasource.hikari.maximumPoolSize=5
+#spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant_administration_db
+#spring.datasource.username=postgres
+#spring.datasource.password=p
+#spring.jpa.hibernate.ddl-auto=create
 
-#drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=gastro.com.restaurantadministration.config.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:sqlite:sqlites_db.db
+spring.datasource.driver-class-name = org.sqlite.JDBC
+spring.datasource.username = sa
+spring.datasource.password =
+spring.datasource.initialization-mode=always
 
 api.v1.rest=api/v1/rest
 api.v1=api/v1
