--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
 	//implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.0'
 	implementation 'org.hibernate:hibernate-gradle-plugin:5.6.9.Final'
-	implementation 'org.postgresql:postgresql:42.3.6'
+	//implementation 'org.postgresql:postgresql:42.3.6'
+	implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.39.2.0'
 	compileOnly 'org.projectlombok:lombok'
 	//runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
